# OpenglTempate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Application.h  Buffer.h  Game.h  Graphics.h  Logger.h  Shader.h  Vertex.h  VertexArray.h  Window.h
res/shaders/: basic.glsl  compile.py
src/: Application.cpp  Buffer.cpp  Graphics.cpp  Logger.cpp  Shader.cpp  Source.cpp  VertexArray.cpp  Window.cpp  main.cpp
